--- a/appspec.yml
+++ b/appspec.yml
@@ -5,10 +5,10 @@ files:
     destination: /var/www/html
 hooks:
   AfterInstall:
-    - location: install_nginx.sh
+    - location: scripts/install_nginx.sh
       timeout: 300
       runas: root
   ApplicationStart:
-    - location: start_nginx.sh
+    - location: scripts/start_nginx.sh
       timeout: 300
       runas: root
